--- a/package.json
+++ b/package.json
@@ -25,12 +25,17 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
+    "axios": "^0.27.2",
+    "echarts": "^5.3.3",
     "element-plus": "^2.2.6",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "font-awesome": "^4.7.0",
+    "html-webpack-plugin": "^5.5.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "webpack": "^5.73.0"
   },
   "eslintConfig": {
     "root": true,
