--- a/.eslintrc
+++ b/.eslintrc
@@ -2,9 +2,10 @@
     "parser": "vue-eslint-parser",
     "plugins": ["vue", "@typescript-eslint"],
     "rules": {
-      "no-debugger": 2,
+      "no-debugger": "off",
       // 禁止使用 var
-      "no-var": "error"
+      "no-var": "error",
+      "no-console": "off"
       // 优先使用 interface 而不是 type
       // '@typescript-eslint/consistent-type-definitions': ['error', 'interface'],
     },
