--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@types/mockjs": "^1.0.6",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
@@ -32,6 +33,8 @@
     "eslint-plugin-vue": "^8.0.3",
     "font-awesome": "^4.7.0",
     "html-webpack-plugin": "^5.5.0",
+    "mock": "^0.1.1",
+    "mockjs": "^1.1.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
     "typescript": "~4.5.5",
