--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@types/crypto-js": "^4.1.1",
     "@types/mockjs": "^1.0.6",
     "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
@@ -28,6 +29,7 @@
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
     "axios": "^0.27.2",
+    "crypto-js": "^4.1.1",
     "echarts": "^5.3.3",
     "element-plus": "^2.2.6",
     "eslint": "^7.32.0",
@@ -39,7 +41,10 @@
     "nprogress": "^0.2.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
+    "secure-web-storage": "^1.0.2",
     "typescript": "~4.5.5",
+    "vue-i18n": "^9.1.10",
+    "vuex-persistedstate": "^4.1.0",
     "webpack": "^5.73.0"
   },
   "eslintConfig": {
